[package]
name = "rust-coinselect"
version = "0.1.0"
edition = "2021"
description = "A blockchain-agnostic coin selection library built in Rust."
readme = "README.md"
homepage = ""
documentation = "https://docs.rs/rust-coinselect"
keywords = ["UTXO", "coinselection", "subsetsum", "algorithms", "bitcoin", "blockchain"]
license = "MIT"
repository = "https://github.com/Bitshala-Incubator/rust-coinselect"

exclude = [".github"]

[dependencies]
rand = "0.8.5"


#Empty default feature set, (helpful to generalise in github actions)
[features]
default = []
