[package]
name = "rust-coinselect"
version = "0.1.1"
edition = "2021"
description = "A blockchain-agnostic coin selection library built in Rust."
readme = "README.md"
documentation = "https://docs.rs/rust-coinselect"
keywords = ["UTXO", "coinselection", "subsetsum", "bitcoin", "blockchain"]
license = "MIT"
repository = "https://github.com/Bitshala-Incubator/rust-coinselect"

exclude = [".github"]

[dependencies]
rand = "0.8.5"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

#Empty default feature set, (helpful to generalise in github actions)
[features]
default = []

[[bench]]
name = "benches"
harness = false

[[bench]]
name = "benches_srd"
harness = false

[[bench]]
name = "benches_bnb"
harness = false

[[bench]]
name = "benches_knapsack"
harness = false

[[bench]]
name = "benches_lowestlarger"
harness = false

[[bench]]
name = "benches_fifo"
harness = false
